--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 	<distributionManagement>
   		<snapshotRepository>
     			<id>nexus</id>
-    			<url>http://3.14.14.184:8081/nexus/content/repositories/snapshots</url>
+    			<url>http://3.15.198.230/:8081/nexus/content/repositories/snapshots</url>
   		</snapshotRepository>
 	</distributionManagement>
 	<build>
