--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 	<distributionManagement>
   		<snapshotRepository>
     			<id>nexus</id>
-    			<url>http://172.31.14.37/:8081/nexus/content/repositories/snapshots</url>
+    			<url>http://172.31.14.37:8081/nexus/content/repositories/snapshots</url>
   		</snapshotRepository>
 	</distributionManagement>
 	<build>
